# workingtitle

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh
Src/: CMakeLists.txt
Src/3rdPartyTest/: CMakeLists.txt
Src/3rdPartyTest/GoogleTest/: OutputTest.cpp
Src/Core/: CMakeLists.txt
Src/Core/include/: Core.h
Src/Core/include/internal/generic/: Constants.h  Index.h  Limits.h  Matrix.h  Normal.h  Normals.h  Numerics.h  Point.h  Points.h  Scalar.h  StackAllocator.h  Vertex.h  Vertices.h
Src/Core/include/internal/geometry/: BoundingBox.h  BoundingObject.h  BoundingSphere.h  Contour.h  Contour2D.h  Contour3D.h  Edge.h  Edges.h  Face.h  FaceVisitor.h  Faces.h  FacesVisitor.h  IBoundingObject.h  Normal.h  Normals.h  Points.h  Shape.h  ShapeFactory.h  Transformation.h  Triangle.h  Vertex.h  Vertices.h
Src/Core/include/internal/utilities/: svg.h
Src/Core/src/: Core.cpp
Src/Core/src/geometry/: Contour.cpp  Contour2D.cpp  Shape.cpp  ShapeFactory.cpp  Transformation.cpp
Src/Core/src/utilities/: svg.cpp
Src/CoreTest/: BoundingObjectTest.cpp  CMakeLists.txt  ConstantsTest.cpp  FaceTest.cpp  LimitsTest.cpp  NumericsTest.cpp  SVGTest.cpp  ShapeTest.cpp  TriangleTest.cpp  VertexTest.cpp
Src/CoreTest/generic/: ConstantsTest.cpp  LimitsTest.cpp  MatrixTest.cpp  NumericsTest.cpp  StackAllocatorTest.cpp  VertexTest.cpp
Src/CoreTest/geometry/: BoundingObjectTest.cpp  FaceTest.cpp  ShapeTest.cpp  TransformationTest.cpp
Src/CoreTest/utilities/: SVGTest.cpp
cmake/: Common.cmake
doc/: Dodecahedron.md
